# FYP_ROS2

./: README.md  frames_2025-04-28_21.46.09.gv  frames_2025-05-19_17.12.19.gv  frames_2025-05-19_17.16.45.gv  frames_2025-05-19_17.21.43.gv  frames_2025-05-19_17.22.27.gv  frames_2025-05-19_17.41.46.gv
ROS2_Controlv3/: ROS2_Controlv3 copy.ino  ROS2_Controlv3.ino  ROS2_Controlv3.txt  byj_gripper.cpp  byj_gripper.h  config.h  endstop.cpp  endstop.h  logger.cpp  logger.h  pinout_uno.h
arduino_hw_interface/: CMakeLists.txt  package.xml
arduino_hw_interface/include/arduino_hw_interface/: arduino_hw_interface.hpp
arduino_hw_interface/src/: arduino_hw_interface.xml
ignore/: dummy_hw_interface correct.cpp  dummy_hw_interface failed.cpp  dummy_hw_interface failsafe.cpp  dummy_hw_interface.cpp  dummy_hw_interface.hpp
ignore/MOVEITARVHIVE/: ROS2_Controlv3.ino  dummy_hw_interface semi working.cpp
ignore/MOVEITARVHIVE/moveitv3totalfail/config/: hardware_config.yaml  moveit_controllers.yaml  robot.ros2_control.xacro  ros2_controllers.yaml
ignore/MOVEITARVHIVE/moveitv3totalfail/launch/: move_group.launch.py  rsp.launch.py
ignore/moveitv3 copy/config/: joint_limits.yaml  robot.urdf.xacro  ros2_controllers.yaml
ignore/moveitv3 copy/launch/: warehouse_db.launch.py
ignore/moveitv3/config/: robot.ros2_control.xacro  robot.urdf.xacro  ros2_controllers.yaml
ignore/moveitv3/launch/: setup_assistant.launch.py
ignore/moveitv3failed/config/: hardware_config.yaml  initial_positions.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
ignore/moveitv3failed/launch/: demo.launch.py
ignore/moveitv3slightlybeforefailed/: .setup_assistant  CMakeLists.txt  package.xml
ignore/moveitv3slightlybeforefailed/config/: robot.ros2_control.xacro  ros2_controllers.yaml  sensors_3d.yaml
ignore/moveitv3slightlybeforefailed/launch/: demo.launch.py  static_virtual_joint_tfs.launch.py
ignore/uno_stepper_interface/: CMakeLists.txt  package.xml  uno_stepper_interface_plugin.xml
ignore/uno_stepper_interface/include/uno_stepper_interface/: uno_stepper_interface.hpp
ignore/uno_stepper_interface/src/: uno_stepper_interface copy.cpp  uno_stepper_interface.cpp
src/: minimal_serial_test.py
src/arduino_hw_interface/: CMakeLists.txt
src/arduino_hw_interface/src/: arduino_hw_interface.cpp
src/dummy_hw_interface/: CMakeLists.txt  dummy_hw_interface_plugins.xml  package.xml
src/dummy_hw_interface/include/dummy_hw_interface/: dummy_hw_interface.hpp
src/dummy_hw_interface/src/: dummy_hw_interface.cpp
src/moveit_point_subscriber/: CMakeLists.txt  package.xml
src/moveit_point_subscriber/src/: point_goal_subscriber_node.cpp
src/moveitv3/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  robot.ros2_control.xacro  ros2_controllers.yaml
src/moveitv3/launch/: demo.launch.py  moveit_rviz.launch.py  my.launch.py  spawn_controllers.launch.py
src/robot_vision/: CMakeLists.txt  package.xml  setup.py
src/robot_vision/config/: camera_calibration.yaml  ost.txt
src/robot_vision/launch/: webcam_launch.py
src/robot_vision/robot_vision/: color_detector.py  pixel_to_3d.py
src/robot_vision/script/: .calculate_camera_pose.py.swp  calculate_camera_pose.py  calculate_camera_pose_v2.py  follow_object.py  generate_static_tf_command.py
src/three_dof_robot_description/: CMakeLists.txt  package.xml
src/three_dof_robot_description/launch/: display.launch.py  launch.py
src/three_dof_robot_description/urdf/: test.urdf  testing.urdf  threeDOFrobot.urdf  threeDOFrobotnomimic.urdf  threeDOFrobotold.urdf
src/uno_stepper_interface/: CMakeLists.txt  package.xml  uno_stepper_interface_plugin.xml
src/uno_stepper_interface/include/uno_stepper_interface/: uno_stepper_interface.hpp
src/uno_stepper_interface/src/: uno_stepper_interface.cpp
