<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_hw_interface</name>
  <version>0.1.0</version>
  <description>Hardware interface for ROS2 control of an Arduino-based robot arm.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license> <!-- Or your preferred license -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>io_context</depend>
  <depend>serial_driver</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
