<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jayrn@todo.todo">jayrn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <exec_depend>image_pipeline</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>
  <depend>tf2_ros_py</depend>
  <depend>image_geometry</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <depend>vision_opencv</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
